deployment/aws/cloudformation/quadratic-quickstart.yml
AWSTemplateFormatVersion: "2010-09-09"
Resources:
  EC2Instance:
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType: "t2.xlarge"
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI]
      SecurityGroups:
        - !Ref OpenSecurityGroup
      BlockDeviceMappings:
        - DeviceName: "/dev/sda1"
          Ebs:
            VolumeSize: "100" # 30 GiB storage size
            VolumeType: "gp3"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Update and install dependencies
          sudo apt-get update
          sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common unzip jq awscli

          # Install AWS CLI v2
          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
          unzip awscliv2.zip
          sudo ./aws/install
          rm -rf aws awscliv2.zip

          # Install Docker
          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
          sudo apt-get update
          sudo apt-get install -y docker-ce docker-ce-cli containerd.io
          sudo curl -L "https://github.com/docker/compose/releases/download/v2.21.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
          sudo chmod +x /usr/local/bin/docker-compose
          sudo chown ubuntu /var/run/docker.sock
          sudo systemctl enable docker
          sudo systemctl start docker
          sudo usermod -aG docker ubuntu

          # Run the init.sh script with positional arguments: LicenseKey and DomainName
          curl -sSf https://raw.githubusercontent.com/quadratichq/quadratic-selfhost/main/init-aws.sh -o init.sh && bash -i init.sh "${LicenseKey}" "${DomainName}"

  OpenSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security group with some ports open"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: "443"
          ToPort: "443"
          CidrIp: "0.0.0.0/0"

Mappings:
  RegionMap:
    us-west-2:
      AMI: "ami-05134c8ef96964280" # Example AMI for us-west-2 (Ubuntu 20.04)
    ap-south-1:
      AMI: "ami-0522ab6e1ddcc7055" # Example AMI for ap-south-1 (Ubuntu 24.04 LTS)

Parameters:
  LicenseKey:
    Type: String
    Description: "Your license key for Quadratic. Get one here https://selfhost.quadratichq.com/"
  DomainName:
    Type: String
    Description: "The domain name you want to host your Quadratic instance (e.g., quadratic.example.com)"

Outputs:
  InstancePublicIp:
    Description: The public IP of the instance.
    Value: !GetAtt EC2Instance.PublicIp
