deployment/aws/cloudformation/quadratic-selfhost-production-single-instance.yml
AWSTemplateFormatVersion: "2010-09-09"
Resources:
  EC2Instance:
    Type: "AWS::EC2::Instance"
    Properties: 
      InstanceType: "t2.xlarge"
      ImageId: !FindInMap [ RegionMap, !Ref "AWS::Region", AMI ]
      SecurityGroups: 
        - !Ref EC2SecurityGroup
      BlockDeviceMappings:
        - DeviceName: "/dev/sda1"
          Ebs:
            VolumeSize: "100"
            VolumeType: "gp3"
      UserData: 
        Fn::Base64: !Sub |
          #!/bin/bash
          # Update and install dependencies
          sudo apt-get update
          sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common awscli jq

          # Install Docker
          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
          sudo apt-get update
          sudo apt-get install -y docker-ce docker-ce-cli containerd.io
          sudo curl -L "https://github.com/docker/compose/releases/download/v2.21.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
          sudo chmod +x /usr/local/bin/docker-compose
          sudo chown ubuntu /var/run/docker.sock
          sudo systemctl enable docker
          sudo systemctl start docker

          # Get the instance ID and region
          DOMAIN_NAME=${DomainName}

          # Fetch License Key
          LICENSE_KEY=${LicenseKey}

          # Get the instance's public IP dynamically
          PUBLIC_IP=$(curl -s http://checkip.amazonaws.com)

          # Echo the License Key, Public IP, and Public DNS for debugging
          echo "License Key: $LICENSE_KEY"
          echo "Public IP: $PUBLIC_IP"

          PUBLIC_IPS - connection
          DATABASE_URL - api
          REDIS_URL - files, multiplayer
          S3_CREDS - api, files

          # Run the init.sh script with positional arguments: LicenseKey and EC2 public IP
          curl -sSf https://raw.githubusercontent.com/quadratichq/quadratic-selfhost/main/init.sh -o init.sh && bash -i init.sh $LICENSE_KEY $DOMAIN_NAME

  EC2SecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security group with specific ports open"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: "443"
          ToPort: "443"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: "5432"
          ToPort: "5432"
          SourceSecurityGroupId: !Ref RDSSecurityGroup
        - IpProtocol: "tcp"
          FromPort: "6379"
          ToPort: "6379"
          SourceSecurityGroupId: !Ref RedisSecurityGroup

  S3Bucket:
    Type: "AWS::S3::Bucket"
    Properties:
      BucketName: !Sub "${AWS::StackName}-bucket"
      VersioningConfiguration:
        Status: Enabled

  RDSInstance:
    Type: "AWS::RDS::DBInstance"
    Properties:
      DBName: "quadraticdb"
      Engine: "postgres"
      MasterUsername: "username" #change me
      MasterUserPassword: "password" #change me
      DBInstanceClass: "db.t3.micro"
      AllocatedStorage: "20"
      PubliclyAccessible: false
      VPCSecurityGroups: 
        - !GetAtt RDSSecurityGroup.GroupId

  RDSSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security group for RDS"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref EC2SecurityGroup

  RedisCluster:
    Type: "AWS::ElastiCache::CacheCluster"
    Properties:
      ClusterName: !Sub "${AWS::StackName}-redis"
      Engine: "redis"
      CacheNodeType: "cache.t3.micro"
      NumCacheNodes: 1
      VpcSecurityGroupIds: 
        - !GetAtt RedisSecurityGroup.GroupId

  RedisSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security group for Redis"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          SourceSecurityGroupId: !Ref EC2SecurityGroup

Mappings:
  RegionMap:
    us-west-2:
      AMI: "ami-05134c8ef96964280" # Example AMI for us-west-2 (Ubuntu 20.04)
    # Add more regions as needed

Parameters:
  LicenseKey:
    Type: String
    Description: "Your license key for Quadratic. Get one here https://selfhost.quadratic-preview.com/"
  DomainName:
    Type: String
    Description: "The domain name you want to host your Quadratic instance (e.g., quadratic.example.com)"

Outputs:
  InstancePublicIp:
    Description: The public IP of the instance
    Value: !GetAtt EC2Instance.PublicIp
